Run-length Smearing

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -838,7 +838,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Number of characters detected:\", len(spp.tags))"
@@ -854,7 +856,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hh = 0\n",
@@ -892,7 +896,11 @@
    "source": [
     "## Sources\n",
     "\n",
-    "[1] [TEXT LINE EXTRACTION USING SEAM CARVING](https://etd.ohiolink.edu/!etd.send_file?accession=akron1428077337&disposition=inline) by Christopher Stoll\n",
+    "* [1] [TEXT LINE EXTRACTION USING SEAM CARVING - master thesis](https://etd.ohiolink.edu/!etd.send_file?accession=akron1428077337&disposition=inline) by Christopher Stoll\n",
+    "* [2] [TEXT LINE EXTRACTION USING SEAM CARVING - paper](http://worldcomp-proceedings.com/proc/p2015/IPC3194.pdf)\n",
+    "* [3] [Seam Carving for Text Line Extraction on Color and Grayscale Historical Manuscripts](https://infoscience.epfl.ch/record/198756/files/ICFHR_2014.pdf)\n",
+    "* [4] [Text line and word segmentation of handwritten documents](http://users.iit.demokritos.gr/~bgat/Louloud_1_2009.pdf)\n",
+    "* [5] [Improving Handwritten Chinese Text Recognition by Unsupervised Language Model Adaptation](http://www.nlpr.ia.ac.cn/2012papers/gjhy/gh34.pdf)\n",
     "\n"
    ]
   },
